# chip8

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  cpu.rs  font.rs  key_mapping.rs  main.rs  nibble.rs  operation.rs
