[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
pixels = "0.9.0"
rand = "0.8.4"
winit = "0.26.1"
winit_input_helper = "0.12.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["utilapiset"] }
